# UniversalisAPI_wrapper

./: .gitignore  MANIFEST.in  README.md  TODO.md  local.py  pyproject.toml
universalis/: __init__.py  _enums.py  _types.py  errors.py
